name:                EPrint
version:             0.1.0.0
synopsis:            Text layout formatter / pretty printer
-- description:         
-- homepage:            https://github.com/mihajek/eprint
license:             BSD3
license-file:        LICENSE
author:              Michal Hájek
maintainer:          mihajek@gmail.com
-- copyright:           
category:            Text, Pretty Printer
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a README.
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10


library
  -- Modules exported by the library.
  exposed-modules:     EPrint, EPrint.Format, EPrint.Options, EPrint.Solution, EPrint.Layout
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  other-extensions:    ApplicativeDo, PatternSynonyms
  build-depends:       base >=4.5 && <5, ListZipper >=1.2 && <2, mtl >=2.2 && <3
  hs-source-dirs:      src
  default-language:    Haskell2010
  
executable test
  main-is:             test.hs
  build-depends:       base >=4.5 && <5, ListZipper >=1.2 && <2, mtl >=2.2 && <3
  hs-source-dirs:      tests, src
  other-modules:       EPrint
  default-language:    Haskell2010

